--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,11 @@
       <artifactId>druid</artifactId>
       <version>1.1.10</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.9</version>
+    </dependency>
   </dependencies>
 
   <build>
